--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.99_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.99:1.10": "Er versteht wahrhaftig, dass Gedanken unbeständig sind. ",
   "sn35.99:1.11": "Er versteht wahrhaftig, dass Geistbewusstsein unbeständig ist. ",
   "sn35.99:1.12": "Er versteht wahrhaftig, dass Geistberührung unbeständig ist. ",
-  "sn35.99:1.13": "Er versteht wahrhaftig, dass das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, unbeständig ist. "
+  "sn35.99:1.13": "Er versteht wahrhaftig, dass das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, unbeständig ist. ",
+  "sn35.99:1.14": "Mönche und Nonnen, entwickelt Versenkung. "
 }
