--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.100:0.1": "Verbundene Lehrreden 35.100 ",
-  "sn35.100:0.2": "10. Das Kapitel über die Sechser "
+  "sn35.100:0.2": "10. Das Kapitel über die Sechser ",
+  "sn35.100:0.3": "Klausur "
 }
