--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -973,6 +973,7 @@
   "sn-name:1079.sn35.97": "Wer nachlässig lebt ",
   "sn-name:1080.sn35.98": "Zügelung ",
   "sn-name:1081.sn35.99": "Versenkung ",
+  "sn-name:1082.sn35.100": "Klausur ",
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
