--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.100:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.100:0.3": "Klausur ",
   "sn35.100:1.1": "„Mönche und Nonnen, meditiert in Klausur. ",
-  "sn35.100:1.2": "Ein Mönch, der in Klausur ist, versteht wahrhaftig. "
+  "sn35.100:1.2": "Ein Mönch, der in Klausur ist, versteht wahrhaftig. ",
+  "sn35.100:1.3": "Was versteht er wahrhaftig? "
 }
