--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.100:1.1": "„Mönche und Nonnen, meditiert in Klausur. ",
   "sn35.100:1.2": "Ein Mönch, der in Klausur ist, versteht wahrhaftig. ",
   "sn35.100:1.3": "Was versteht er wahrhaftig? ",
-  "sn35.100:1.4": "Er versteht wahrhaftig, dass das Auge unbeständig ist. "
+  "sn35.100:1.4": "Er versteht wahrhaftig, dass das Auge unbeständig ist. ",
+  "sn35.100:1.5": "Er versteht wahrhaftig, dass Bilder unbeständig sind. "
 }
