--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.100:1.3": "Was versteht er wahrhaftig? ",
   "sn35.100:1.4": "Er versteht wahrhaftig, dass das Auge unbeständig ist. ",
   "sn35.100:1.5": "Er versteht wahrhaftig, dass Bilder unbeständig sind. ",
-  "sn35.100:1.6": "Er versteht wahrhaftig, dass Augenbewusstsein unbeständig ist. "
+  "sn35.100:1.6": "Er versteht wahrhaftig, dass Augenbewusstsein unbeständig ist. ",
+  "sn35.100:1.7": "Er versteht wahrhaftig, dass Augenberührung unbeständig ist. "
 }
