--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.100_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.100:1.6": "Er versteht wahrhaftig, dass Augenbewusstsein unbeständig ist. ",
   "sn35.100:1.7": "Er versteht wahrhaftig, dass Augenberührung unbeständig ist. … ",
   "sn35.100:1.8": "Er versteht wahrhaftig, dass das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, unbeständig ist. ",
-  "sn35.100:1.9": "Mönche und Nonnen, meditiert in Klausur. "
+  "sn35.100:1.9": "Mönche und Nonnen, meditiert in Klausur. ",
+  "sn35.100:1.10": "Eine Nonne, die in Klausur ist, versteht wahrhaftig.“ "
 }
