--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.101:0.1": "Verbundene Lehrreden 35.101 "
+  "sn35.101:0.1": "Verbundene Lehrreden 35.101 ",
+  "sn35.101:0.2": "10. Das Kapitel über die Sechser "
 }
