--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.101:1.1": "„Mönche und Nonnen, gebt auf, was nicht euer ist. ",
   "sn35.101:1.2": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:1.3": "Und was ist nicht euer? ",
-  "sn35.101:1.4": "Das Auge ist nicht euer: Gebt es auf. "
+  "sn35.101:1.4": "Das Auge ist nicht euer: Gebt es auf. ",
+  "sn35.101:1.6": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
