--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.101:1.3": "Und was ist nicht euer? ",
   "sn35.101:1.4": "Das Auge ist nicht euer: Gebt es auf. ",
   "sn35.101:1.6": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.101:1.7": "Bilder sind nicht euer: Gebt sie auf. "
+  "sn35.101:1.7": "Bilder sind nicht euer: Gebt sie auf. ",
+  "sn35.101:1.9": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
