--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.101:1.13": "Augenberührung ist nicht euer: Gebt sie auf. ",
   "sn35.101:1.15": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:1.16": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Augenberührung bedingt entsteht, ist nicht euer: Gebt es auf. ",
-  "sn35.101:1.18": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
+  "sn35.101:1.18": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
+  "sn35.101:2.1": "Das Ohr ist nicht euer … Die Nase ist nicht euer … Die Zunge ist nicht euer … Der Körper ist nicht euer … "
 }
