--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.101:2.1": "Das Ohr ist nicht euer … Die Nase ist nicht euer … Die Zunge ist nicht euer … Der Körper ist nicht euer … ",
   "sn35.101:3.1": "Der Geist ist nicht euer: Gebt ihn auf. ",
   "sn35.101:3.3": "Ihn aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.101:3.4": "Gedanken sind nicht euer: Gebt sie auf. "
+  "sn35.101:3.4": "Gedanken sind nicht euer: Gebt sie auf. ",
+  "sn35.101:3.6": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
