--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn35.101:3.9": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:3.10": "Geistberührung ist nicht euer: Gebt sie auf. ",
   "sn35.101:3.12": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.101:3.13": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. "
+  "sn35.101:3.13": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. ",
+  "sn35.101:3.15": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
