--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.101:3.10": "Geistberührung ist nicht euer: Gebt sie auf. ",
   "sn35.101:3.12": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:3.13": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. ",
-  "sn35.101:3.15": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
+  "sn35.101:3.15": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
+  "sn35.101:4.1": "Wie wenn jemand Gras, Stängel, Zweige und Blätter hier in Jetas Wäldchen wegtragen oder verbrennen würde, oder er täte damit, was er wollte – "
 }
