--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -29,5 +29,5 @@
   "sn35.101:4.1": "Wie wenn jemand Gras, Stängel, Zweige und Blätter hier in Jetas Wäldchen wegtragen oder verbrennen würde, oder er täte damit, was er wollte – ",
   "sn35.101:4.2": "würdet ihr da denken: ",
   "sn35.101:4.3": "‚Dieser Mensch trägt uns weg, verbrennt uns oder tut mit uns, was er will‘?“ ",
-  "sn35.101:5.1": "„Nein, Herr.“ "
+  "sn35.101:5.1": "„Nein, Herr. "
 }
