--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn35.101:4.3": "‚Dieser Mensch trägt uns weg, verbrennt uns oder tut mit uns, was er will‘?“ ",
   "sn35.101:5.1": "„Nein, Herr. ",
   "sn35.101:6.1": "Und warum nicht? ",
-  "sn35.101:7.1": "Weil das weder ein Selbst ist noch zu einem Selbst gehört.“ "
+  "sn35.101:7.1": "Weil das weder ein Selbst ist noch zu einem Selbst gehört.“ ",
+  "sn35.101:8.1": "„Ebenso, Mönche und Nonnen, ist das Auge nicht euer: Gebt es auf. "
 }
