--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn35.101:6.1": "Und warum nicht? ",
   "sn35.101:7.1": "Weil das weder ein Selbst ist noch zu einem Selbst gehört.“ ",
   "sn35.101:8.1": "„Ebenso, Mönche und Nonnen, ist das Auge nicht euer: Gebt es auf. ",
-  "sn35.101:8.3": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
+  "sn35.101:8.3": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
+  "sn35.101:8.4": "Bilder sind nicht euer … "
 }
