--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.101:8.1": "„Ebenso, Mönche und Nonnen, ist das Auge nicht euer: Gebt es auf. ",
   "sn35.101:8.3": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:8.4": "Bilder sind nicht euer … ",
-  "sn35.101:8.5": "Augenbewusstsein ist nicht euer … "
+  "sn35.101:8.5": "Augenbewusstsein ist nicht euer … ",
+  "sn35.101:8.6": "Augenberührung ist nicht euer … "
 }
