--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.101_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn35.101:8.3": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.101:8.4": "Bilder sind nicht euer … ",
   "sn35.101:8.5": "Augenbewusstsein ist nicht euer … ",
-  "sn35.101:8.6": "Augenberührung ist nicht euer … "
+  "sn35.101:8.6": "Augenberührung ist nicht euer … ",
+  "sn35.101:8.7": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. "
 }
