--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.102:0.1": "Verbundene Lehrreden 35.102 ",
   "sn35.102:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.102:0.3": "Nicht euer (2) ",
-  "sn35.102:1.1": "„Mönche und Nonnen, gebt auf, was nicht euer ist. "
+  "sn35.102:1.1": "„Mönche und Nonnen, gebt auf, was nicht euer ist. ",
+  "sn35.102:1.2": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
 }
