--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.102:1.7": "Bilder sind nicht euer: Gebt sie auf. ",
   "sn35.102:1.9": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.102:1.10": "Augenbewusstsein ist nicht euer: Gebt es auf. ",
-  "sn35.102:1.12": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. "
+  "sn35.102:1.12": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
+  "sn35.102:1.13": "Augenberührung ist nicht euer: Gebt sie auf. "
 }
