--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.102:1.10": "Augenbewusstsein ist nicht euer: Gebt es auf. ",
   "sn35.102:1.12": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
   "sn35.102:1.13": "Augenberührung ist nicht euer: Gebt sie auf. ",
-  "sn35.102:1.15": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. … "
+  "sn35.102:1.15": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. … ",
+  "sn35.102:1.16": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. "
 }
