--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.102_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.102:1.15": "Sie aufzugeben, wird zu eurem Nutzen und Glück sein. … ",
   "sn35.102:1.16": "Das angenehme, schmerzhafte oder neutrale Gefühl, das durch Geistberührung bedingt entsteht, ist nicht euer: Gebt es auf. ",
   "sn35.102:1.18": "Es aufzugeben, wird zu eurem Nutzen und Glück sein. ",
-  "sn35.102:1.19": "Gebt auf, was nicht euer ist. "
+  "sn35.102:1.19": "Gebt auf, was nicht euer ist. ",
+  "sn35.102:1.20": "Es aufzugeben, wird zu eurem Nutzen und Glück sein.“ "
 }
