--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.103:0.1": "Verbundene Lehrreden 35.103 ",
-  "sn35.103:0.2": "10. Das Kapitel über die Sechser "
+  "sn35.103:0.2": "10. Das Kapitel über die Sechser ",
+  "sn35.103:0.3": "Über Uddaka "
 }
