--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -976,6 +976,7 @@
   "sn-name:1082.sn35.100": "Klausur ",
   "sn-name:1083.sn35.101": "Nicht euer (1) ",
   "sn-name:1084.sn35.102": "Nicht euer (2) ",
+  "sn-name:1085.sn35.103": "Über Uddaka ",
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
