--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -140,7 +140,7 @@
   "dn29:16.6": "dann sollte man das von diesem spirituellen Pfad sagen. ",
   "dn29:16.8": "Uddaka, der Sohn Rāmas, pflegte zu sagen: ",
   "dn29:16.9": "‚Während man sieht, sieht man nicht.‘ ",
-  "dn29:16.10": "Aber was sieht man, während man nicht sieht? ",
+  "dn29:16.10": "Aber während man was sieht, sieht man nicht? ",
   "dn29:16.11": "Man kann die Klinge eines gut geschärften Rasiermessers sehen, aber die Schneide sieht man nicht. ",
   "dn29:16.12": "Daher heißt es: ",
   "dn29:16.13": "‚Man sieht und sieht auch nicht.‘ ",
