--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -152,7 +152,7 @@
   "dn29:16.20": "Man sieht nicht: etwas, das ihn noch reiner machen könnte, wenn man es wegnähme. ",
   "dn29:16.21": "Man sieht nicht: etwas, das ihn noch vollständiger machen könnte, wenn man es hinzufügte. ",
   "dn29:16.22": "Daher heißt es zu Recht: ",
-  "dn29:16.23": "‚Man sieht und sieht auch nicht.‘ ",
+  "dn29:16.23": "‚Während man sieht, sieht man nicht.‘ ",
   "dn29:17.0": "6. Die Lehren sollen im Chor aufgesagt werden ",
   "dn29:17.1": "Daher, Cunda, solltet ihr alle zusammenkommen und die Dinge, die ich euch aus meiner unmittelbaren Einsicht heraus gelehrt habe, im Chor aufsagen, ohne zu streiten, Bedeutung mit Bedeutung und Ausdruck mit Ausdruck vergleichen, sodass dieser spirituelle Pfad lange Zeit bestehen bleibt – zum Nutzen und Glück vieler Menschen, aus Anteilnahme für die Welt, zum Vorteil, Nutzen und Glück von Göttern und Menschen. ",
   "dn29:17.2": "Und was sind die Dinge, die ich aus meiner unmittelbaren Einsicht heraus gelehrt habe? ",
