--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.103:2.1": "Und wie ist jemand ein Meister des Wissens? ",
   "sn35.103:2.2": "Da versteht ein Mönch bei den sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und die nachteiligen Folgen und das Entrinnen. ",
   "sn35.103:2.3": "So ist ein Mönch ein Meister des Wissens. ",
-  "sn35.103:3.1": "Und wie ist eine Nonne eine Bezwingerin von allem? "
+  "sn35.103:3.1": "Und wie ist eine Nonne eine Bezwingerin von allem? ",
+  "sn35.103:3.2": "Da wird eine Nonne durch Nicht-Ergreifen befreit, nachdem sie bei diesen sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen verstanden hat. "
 }
