--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn35.103:0.2": "10. Das Kapitel über die Sechser ",
   "sn35.103:0.3": "Über Uddaka ",
   "sn35.103:1.1": "„Mönche und Nonnen, Uddaka, der Sohn Rāmas, pflegte zu sagen: ",
-  "sn35.103:1.2": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Das ist sicher der von Grund auf ausgemerzte Eiterherd, der nie zuvor ausgemerzt war!‘ ",
+  "sn35.103:1.2": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Da ist sicher dieser Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war!‘ ",
   "sn35.103:1.3": "Obwohl Uddaka, der Sohn Rāmas, kein Meister des Wissens war, sagte er: ‚Ich bin ein Meister des Wissens.‘ Obwohl er kein Bezwinger von allem war, sagte er: ‚Ich bin ein Bezwinger von allem.‘ Und obwohl der Eiterherd nicht von Grund auf ausgemerzt war, sagte er: ‚Ich habe den Eiterherd von Grund auf ausgemerzt.‘ ",
   "sn35.103:1.4": "So würde ein Mönch oder eine Nonne zu Recht sagen: ",
   "sn35.103:1.5": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Das ist sicher der von Grund auf ausgemerzte Eiterherd, der nie zuvor ausgemerzt war!‘ ",
