--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.103:2.3": "So ist ein Mönch ein Meister des Wissens. ",
   "sn35.103:3.1": "Und wie ist eine Nonne eine Bezwingerin von allem? ",
   "sn35.103:3.2": "Da wird eine Nonne durch Nicht-Ergreifen befreit, nachdem sie bei diesen sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen verstanden hat. ",
-  "sn35.103:3.3": "So ist eine Nonne eine Bezwingerin von allem. "
+  "sn35.103:3.3": "So ist eine Nonne eine Bezwingerin von allem. ",
+  "sn35.103:4.1": "Und wie hat ein Mönch den Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war? "
 }
