--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.103:3.2": "Da wird eine Nonne durch Nicht-Ergreifen befreit, nachdem sie bei diesen sechs Berührungsfeldern wahrhaftig den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen und das Entrinnen verstanden hat. ",
   "sn35.103:3.3": "So ist eine Nonne eine Bezwingerin von allem. ",
   "sn35.103:4.1": "Und wie hat ein Mönch den Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war? ",
-  "sn35.103:4.2": "‚Eiterherd‘ ist ein Ausdruck für diesen Körper, der aus den vier Grundelementen besteht, von Mutter und Vater gezeugt, mit Reis und Brei aufgebaut, der vergehen, sich abnutzen und schwinden muss, der aufgelöst und zerstört werden muss. "
+  "sn35.103:4.2": "‚Eiterherd‘ ist ein Ausdruck für diesen Körper, der aus den vier Grundelementen besteht, von Mutter und Vater gezeugt, mit Reis und Brei aufgebaut, der vergehen, sich abnutzen und schwinden muss, der aufgelöst und zerstört werden muss. ",
+  "sn35.103:4.3": "‚Der Grund des Eiterherds‘ ist ein Ausdruck für Verlangen. "
 }
