--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.103:4.2": "‚Eiterherd‘ ist ein Ausdruck für diesen Körper, der aus den vier Grundelementen besteht, von Mutter und Vater gezeugt, mit Reis und Brei aufgebaut, der vergehen, sich abnutzen und schwinden muss, der aufgelöst und zerstört werden muss. ",
   "sn35.103:4.3": "‚Der Grund des Eiterherds‘ ist ein Ausdruck für Verlangen. ",
   "sn35.103:4.4": "Es ist, wenn ein Mönch das Verlangen aufgegeben hat, es an der Wurzel abgeschnitten hat, sodass es wie der Stumpf einer Palme ist, dass es ausgelöscht ist und sich in Zukunft nicht mehr erheben kann. ",
-  "sn35.103:4.5": "So hat ein Mönch den Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war. "
+  "sn35.103:4.5": "So hat ein Mönch den Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war. ",
+  "sn35.103:5.1": "Uddaka, der Sohn Rāmas, pflegte zu sagen: "
 }
