--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.103_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.103:4.3": "‚Der Grund des Eiterherds‘ ist ein Ausdruck für Verlangen. ",
   "sn35.103:4.4": "Es ist, wenn ein Mönch das Verlangen aufgegeben hat, es an der Wurzel abgeschnitten hat, sodass es wie der Stumpf einer Palme ist, dass es ausgelöscht ist und sich in Zukunft nicht mehr erheben kann. ",
   "sn35.103:4.5": "So hat ein Mönch den Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war. ",
-  "sn35.103:5.1": "Uddaka, der Sohn Rāmas, pflegte zu sagen: "
+  "sn35.103:5.1": "Uddaka, der Sohn Rāmas, pflegte zu sagen: ",
+  "sn35.103:5.2": "‚Das ist sicher ein Meister des Wissens! Das ist sicher der Bezwinger von allem! Da ist sicher dieser Eiterherd von Grund auf ausgemerzt, der nie zuvor ausgemerzt war!‘ "
 }
