--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -980,6 +980,7 @@
   "sn-name:1086.sn35-tatiyapannasaka": "Die dritten Fünfzig ",
   "sn-name:1087.sn35-yogakkhemivagga": "Das Kapitel über Geborgenheit ",
   "sn-name:1088.sn35.104": "Geborgenheit ",
+  "sn-name:1089.sn35.105": "Weil man ergreift ",
   "sn-name:1097.sn35.113": "Mithören ",
   "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
