--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.105:3.4": "Ist das Auge beständig oder unbeständig?“ ",
   "sn35.105:4.1": "„Unbeständig, Herr.“ ",
   "sn35.105:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
-  "sn35.105:6.1": "„Leiden, Herr.“ "
+  "sn35.105:6.1": "„Leiden, Herr.“ ",
+  "sn35.105:7.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ "
 }
