--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.105:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.105:6.1": "„Leiden, Herr.“ ",
   "sn35.105:7.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ ",
-  "sn35.105:8.1": "„Nein, Herr.“ … "
+  "sn35.105:8.1": "„Nein, Herr.“ … ",
+  "sn35.105:9.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … "
 }
