--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.105:6.1": "„Leiden, Herr.“ ",
   "sn35.105:7.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ ",
   "sn35.105:8.1": "„Nein, Herr.“ … ",
-  "sn35.105:9.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … "
+  "sn35.105:9.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … ",
+  "sn35.105:15.1": "Ist der Geist beständig oder unbeständig?“ "
 }
