--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.105:9.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … ",
   "sn35.105:15.1": "Ist der Geist beständig oder unbeständig?“ ",
   "sn35.105:16.1": "„Unbeständig, Herr.“ ",
-  "sn35.105:17.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ "
+  "sn35.105:17.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
+  "sn35.105:18.1": "„Leiden, Herr.“ "
 }
